tests/ast/snapshots/r#mod__ast__variables__should_assign_i32.snap
---
source: tests/ast/variables.rs
expression: "ast_from_code_str(r#\"a: i32 = 13\"#, \"variables/should_assign_i32/default\")"
---
[
    VariableDeclaration(
        Variable {
            var_type: I32,
            name: "a",
            value: Operand(
                LiteralI32(
                    13,
                ),
            ),
            location: 0..0,
        },
    ),
]
