tests/ast/snapshots/r#mod__ast__variables__should_mismatch_type_f32-2.snap
---
source: tests/ast/variables.rs
expression: "ast_from_code_str(r#\"\n    b: i32 = 13\n    a: f32 = b\n    \"#,\n    \"variables/should_mismatch_type_f32/from_variable\")"
---
User {
    error: WrongType {
        error: [
            ErrorTip {
                message: "expected `f32`",
                location: 24..27,
            },
            ErrorTip {
                message: "found variable b which is `i32`",
                location: 30..31,
            },
        ],
        help: Some(
            "You can either try to cast the value to `f32` or change the variable type to `i32`",
        ),
    },
}
