tests/ast/snapshots/r#mod__ast__variables__should_mismatch_type_f32.snap
---
source: tests/ast/variables.rs
expression: "ast_from_code_str(r#\"a: f32 = 13\"#,\n    \"variables/should_mismatch_type_f32/default\")"
---
User {
    error: WrongType {
        error: [
            ErrorTip {
                message: "expected `f32`",
                location: 3..6,
            },
            ErrorTip {
                message: "found `i32`",
                location: 9..11,
            },
        ],
        help: Some(
            "You can either try to cast the value to `f32` or change the variable type to `i32`",
        ),
    },
}
